<resources>
    <string name="app_name">sky-scanner-app-view</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="add_new_button">DODAJ NOWY PROFIL</string>
    <string name="edit_button">EDYTUJ PROFIL</string>
    <string name="del_button">USUŃ PROFIL</string>

    <string name="cancel_button">ANULUJ</string>
    <string name="save_button">ZAPISZ</string>

    <string name="adults_count_text">Dorośli</string>
    <string name="childs_count_text">Dzieci</string>
    <string name="departure_loc_text">Lotnisko odlotu</string>
    <string name="arrival_loc_text">Lotnisko przylotu</string>
    <string name="date_range_text">Okres wylotu</string>
    <string name="date_range_from_text">Okres od</string>
    <string name="date_range_to_text">Okres do</string>
    <string name="max_transfers_text">Maksymalna liczba przesiadek</string>
    <string name="max_cost_text">Maksymalna oczekiwana cena</string>
    <string name="just_weekends_text">Szukaj tylko lotów weekendowych</string>
    <string name="add_new_profile_tab_caption">Dodaj...</string>
    <string name="refresh_button">Odśwież</string>
    <string name="price">Cena:</string>
    <string name="transfers_number">Przesiadki:</string>
    <string name="arrival_date" >"Wylot: "</string>
    <string name="departure_date">Przylot:</string>

    <string name="linkFromStrings"><a href="https://www.google.pl/">Google</a></string>


</resources>
